<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overlapping_events"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/you_have_another_event_scheduled_at_this_time"
        android:textColor="@color/text_grey"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvConflictingEventDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/spades_gala_2026_n2_00pm_6_00pm"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/do_you_wish_to_continue_with_this_rsvp"
        android:textColor="@color/text_grey"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNoOverlap"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/green_accept"
            app:cornerRadius="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnYesOverlap"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/text_grey"
            app:backgroundTint="@color/bg_student"
            app:cornerRadius="24dp" />
    </LinearLayout>
</LinearLayout>